// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TextInputModal render should render aria label 1`] = `
<body
  class="pf-v6-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div
    class="pf-v6-c-backdrop"
    id="pf-modal-part-7"
  >
    <div
      class="pf-v6-l-bullseye"
    >
      <div
        aria-label="Some aria label - modal"
        aria-modal="true"
        class="pf-v6-c-modal-box ins-c-inventory__detail--edit pf-m-sm"
        data-ouia-component-id="OUIA-Generated-Modal-small-:r16:"
        data-ouia-component-type="PF6/ModalContent"
        data-ouia-safe="true"
        id="pf-modal-part-6"
        role="dialog"
      >
        <div
          class="pf-v6-c-modal-box__close"
        >
          <button
            aria-label="Close"
            class="pf-v6-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Modal-small-:r16:-ModalBoxCloseButton"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                />
              </svg>
            </span>
          </button>
        </div>
        <header
          class="pf-v6-c-modal-box__header"
        >
          <h1
            class="pf-v6-c-modal-box__title"
          >
            <span
              class="pf-v6-c-modal-box__title-text"
            />
          </h1>
        </header>
        <div
          class="pf-v6-c-modal-box__body"
        >
          <span
            class="pf-v6-c-form-control pf-m-error"
          >
            <input
              aria-invalid="true"
              aria-label="Some aria label"
              data-ouia-component-id="OUIA-Generated-TextInputBase-:r19:"
              data-ouia-component-type="PF6/TextInput"
              data-ouia-safe="true"
              type="text"
              value=""
            />
            <span
              class="pf-v6-c-form-control__utilities"
            >
              <span
                class="pf-v6-c-form-control__icon pf-m-status"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 32 32"
                  width="1em"
                >
                  <path
                    d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm-1.5 8a1.5 1.5 0 1 1 3 0v7a1.5 1.5 0 1 1-3 0V9ZM16 25.001a2 2 0 1 1-.001-3.999A2 2 0 0 1 16 25.001Z"
                  />
                </svg>
              </span>
            </span>
          </span>
          <div
            class="pf-v6-c-form__helper-text"
          >
            <div
              aria-live="polite"
              class="pf-v6-c-helper-text"
              id="helper-text2"
            >
              <div
                class="pf-v6-c-helper-text__item pf-m-error"
              >
                <span
                  class="pf-v6-c-helper-text__item-icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v6-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 32 32"
                    width="1em"
                  >
                    <path
                      d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm-1.5 8a1.5 1.5 0 1 1 3 0v7a1.5 1.5 0 1 1-3 0V9ZM16 25.001a2 2 0 1 1-.001-3.999A2 2 0 0 1 16 25.001Z"
                    />
                  </svg>
                </span>
                <span
                  class="pf-v6-c-helper-text__item-text"
                >
                  Name cannot be blank
                  <span
                    class="pf-v6-screen-reader"
                  >
                    : 
                    error status
                    ;
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <footer
          class="pf-v6-c-modal-box__footer"
        >
          <button
            class="pf-v6-c-button pf-m-primary"
            data-action="confirm"
            data-ouia-component-id="OUIA-Generated-Button-primary-:r1a:"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            disabled=""
            type="button"
          >
            <span
              class="pf-v6-c-button__text"
            >
              Save
            </span>
          </button>
          <button
            class="pf-v6-c-button pf-m-link"
            data-action="cancel"
            data-ouia-component-id="OUIA-Generated-Button-link-:r1b:"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__text"
            >
              Cancel
            </span>
          </button>
        </footer>
      </div>
    </div>
  </div>
</body>
`;

exports[`TextInputModal render should render open 1`] = `
<body
  class="pf-v6-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div
    class="pf-v6-c-backdrop"
    id="pf-modal-part-5"
  >
    <div
      class="pf-v6-l-bullseye"
    >
      <div
        aria-label="input text - modal"
        aria-modal="true"
        class="pf-v6-c-modal-box ins-c-inventory__detail--edit pf-m-sm"
        data-ouia-component-id="OUIA-Generated-Modal-small-:ro:"
        data-ouia-component-type="PF6/ModalContent"
        data-ouia-safe="true"
        id="pf-modal-part-4"
        role="dialog"
      >
        <div
          class="pf-v6-c-modal-box__close"
        >
          <button
            aria-label="Close"
            class="pf-v6-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Modal-small-:ro:-ModalBoxCloseButton"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                />
              </svg>
            </span>
          </button>
        </div>
        <header
          class="pf-v6-c-modal-box__header"
        >
          <h1
            class="pf-v6-c-modal-box__title"
          >
            <span
              class="pf-v6-c-modal-box__title-text"
            />
          </h1>
        </header>
        <div
          class="pf-v6-c-modal-box__body"
        >
          <span
            class="pf-v6-c-form-control pf-m-error"
          >
            <input
              aria-invalid="true"
              aria-label="input text"
              data-ouia-component-id="OUIA-Generated-TextInputBase-:rr:"
              data-ouia-component-type="PF6/TextInput"
              data-ouia-safe="true"
              type="text"
              value=""
            />
            <span
              class="pf-v6-c-form-control__utilities"
            >
              <span
                class="pf-v6-c-form-control__icon pf-m-status"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 32 32"
                  width="1em"
                >
                  <path
                    d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm-1.5 8a1.5 1.5 0 1 1 3 0v7a1.5 1.5 0 1 1-3 0V9ZM16 25.001a2 2 0 1 1-.001-3.999A2 2 0 0 1 16 25.001Z"
                  />
                </svg>
              </span>
            </span>
          </span>
          <div
            class="pf-v6-c-form__helper-text"
          >
            <div
              aria-live="polite"
              class="pf-v6-c-helper-text"
              id="helper-text2"
            >
              <div
                class="pf-v6-c-helper-text__item pf-m-error"
              >
                <span
                  class="pf-v6-c-helper-text__item-icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v6-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 32 32"
                    width="1em"
                  >
                    <path
                      d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm-1.5 8a1.5 1.5 0 1 1 3 0v7a1.5 1.5 0 1 1-3 0V9ZM16 25.001a2 2 0 1 1-.001-3.999A2 2 0 0 1 16 25.001Z"
                    />
                  </svg>
                </span>
                <span
                  class="pf-v6-c-helper-text__item-text"
                >
                  Name cannot be blank
                  <span
                    class="pf-v6-screen-reader"
                  >
                    : 
                    error status
                    ;
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <footer
          class="pf-v6-c-modal-box__footer"
        >
          <button
            class="pf-v6-c-button pf-m-primary"
            data-action="confirm"
            data-ouia-component-id="OUIA-Generated-Button-primary-:rs:"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            disabled=""
            type="button"
          >
            <span
              class="pf-v6-c-button__text"
            >
              Save
            </span>
          </button>
          <button
            class="pf-v6-c-button pf-m-link"
            data-action="cancel"
            data-ouia-component-id="OUIA-Generated-Button-link-:rt:"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__text"
            >
              Cancel
            </span>
          </button>
        </footer>
      </div>
    </div>
  </div>
</body>
`;

exports[`TextInputModal render should render title 1`] = `
<body
  class="pf-v6-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div
    class="pf-v6-c-backdrop"
    id="pf-modal-part-6"
  >
    <div
      class="pf-v6-l-bullseye"
    >
      <div
        aria-label="input text - modal"
        aria-modal="true"
        class="pf-v6-c-modal-box ins-c-inventory__detail--edit pf-m-sm"
        data-ouia-component-id="OUIA-Generated-Modal-small-:rv:"
        data-ouia-component-type="PF6/ModalContent"
        data-ouia-safe="true"
        id="pf-modal-part-5"
        role="dialog"
      >
        <div
          class="pf-v6-c-modal-box__close"
        >
          <button
            aria-label="Close"
            class="pf-v6-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Modal-small-:rv:-ModalBoxCloseButton"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                />
              </svg>
            </span>
          </button>
        </div>
        <header
          class="pf-v6-c-modal-box__header"
        >
          <h1
            class="pf-v6-c-modal-box__title"
          >
            <span
              class="pf-v6-c-modal-box__title-text"
            >
              Some title
            </span>
          </h1>
        </header>
        <div
          class="pf-v6-c-modal-box__body"
        >
          <span
            class="pf-v6-c-form-control pf-m-error"
          >
            <input
              aria-invalid="true"
              aria-label="input text"
              data-ouia-component-id="OUIA-Generated-TextInputBase-:r12:"
              data-ouia-component-type="PF6/TextInput"
              data-ouia-safe="true"
              type="text"
              value=""
            />
            <span
              class="pf-v6-c-form-control__utilities"
            >
              <span
                class="pf-v6-c-form-control__icon pf-m-status"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 32 32"
                  width="1em"
                >
                  <path
                    d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm-1.5 8a1.5 1.5 0 1 1 3 0v7a1.5 1.5 0 1 1-3 0V9ZM16 25.001a2 2 0 1 1-.001-3.999A2 2 0 0 1 16 25.001Z"
                  />
                </svg>
              </span>
            </span>
          </span>
          <div
            class="pf-v6-c-form__helper-text"
          >
            <div
              aria-live="polite"
              class="pf-v6-c-helper-text"
              id="helper-text2"
            >
              <div
                class="pf-v6-c-helper-text__item pf-m-error"
              >
                <span
                  class="pf-v6-c-helper-text__item-icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v6-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 32 32"
                    width="1em"
                  >
                    <path
                      d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm-1.5 8a1.5 1.5 0 1 1 3 0v7a1.5 1.5 0 1 1-3 0V9ZM16 25.001a2 2 0 1 1-.001-3.999A2 2 0 0 1 16 25.001Z"
                    />
                  </svg>
                </span>
                <span
                  class="pf-v6-c-helper-text__item-text"
                >
                  Name cannot be blank
                  <span
                    class="pf-v6-screen-reader"
                  >
                    : 
                    error status
                    ;
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <footer
          class="pf-v6-c-modal-box__footer"
        >
          <button
            class="pf-v6-c-button pf-m-primary"
            data-action="confirm"
            data-ouia-component-id="OUIA-Generated-Button-primary-:r13:"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            disabled=""
            type="button"
          >
            <span
              class="pf-v6-c-button__text"
            >
              Save
            </span>
          </button>
          <button
            class="pf-v6-c-button pf-m-link"
            data-action="cancel"
            data-ouia-component-id="OUIA-Generated-Button-link-:r14:"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__text"
            >
              Cancel
            </span>
          </button>
        </footer>
      </div>
    </div>
  </div>
</body>
`;

exports[`TextInputModal render should render without any props 1`] = `
<body
  class=""
>
  <div />
</body>
`;
